@@ -96,6 +96,7 @@ function PMA_exportHeader() {
  */
 function PMA_exportDBHeader($db) {
     global $crlf;
+    $db = str_replace(' ', '_', $db);
     $head = '<!--' . $crlf
           . '- ' . $GLOBALS['strDatabase'] . ': ' . (isset($GLOBALS['use_backquotes']) ? PMA_backquote($db) : '\'' . $db . '\''). $crlf
           . '-->' . $crlf
@@ -114,6 +115,7 @@ function PMA_exportDBHeader($db) {
  */
 function PMA_exportDBFooter($db) {
     global $crlf;
+    $db = str_replace(' ', '_', $db);
     return PMA_exportOutputHandler('</' . $db . '>' . $crlf);
 }
 
@@ -145,11 +147,13 @@ function PMA_exportDBCreate($db) {
  * @access  public
  */
 function PMA_exportData($db, $table, $crlf, $error_url, $sql_query) {
+    $db = str_replace(' ', '_', $db);
+    $table = str_replace(' ', '_', $table);
     $result      = PMA_DBI_query($sql_query, null, PMA_DBI_QUERY_UNBUFFERED);
 
     $columns_cnt = PMA_DBI_num_fields($result);
     for ($i = 0; $i < $columns_cnt; $i++) {
-        $columns[$i] = stripslashes(PMA_DBI_field_name($result, $i));
+        $columns[$i] = stripslashes(str_replace(' ', '_', PMA_DBI_field_name($result, $i)));
     }
     unset($i);
 
