@@ -59,6 +59,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Tomas Srnka - tomassrnka
 
 3.1.5.0 (not yet released)
+- patch #2739001 [export] XML does not allow spaces in element names, 
+  thanks to Derek Schaefer - drummingds1
 
 3.1.4.0 (not yet released)
 + patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
